--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,5 +25,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm i
-    - run: npm npm i -g ts-node
-    - run: npm run build
+    - run: npm i -g ts-node
+    - run: npm run prod
