--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,8 +24,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm i
-    - run: npm i -g ts-node
-    - run: npm run build
+    - name: Build the latest Docker image
+      run: docker build . --file Dockerfile --tag usersfront:latest
+    - run: docker ps -a
       
       
