--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Build the latest Docker image
       run: docker build . --file Dockerfile --tag usersfront:latest
+    - run: docker run --name front -d -p 8000:8005 usersfront:latest
     - run: docker ps -a
       
       
